stateDiagram-v2
    [*] --> Available: Issue
    Available --> Locked: Sell token
    Locked --> Active: Sell token
    Active --> Active: Transfer token
    Active --> Used: Redeem
    Used --> Active: UnRedeem
    Available --> Retired: Retire asset
    Active --> Retired: Retire asset
    Used --> Retired: Retire asset
    Retired --> [*]
